--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,11 +1,13 @@
+@import "values";
+
 html, body {
     margin: 0;
     padding: 0;
     border: 0;
+    background-color: $main-color;
 }
 
 body {
-    background-color: rgb(0, 137, 123);
     color: white;
     -webkit-user-select: none;
 }
