--- a/src/style/_values.scss
+++ b/src/style/_values.scss
@@ -16,3 +16,23 @@ $main-rows-height: 315px;
         transform: rotate(360deg);
     }
 }
+
+@keyframes scale-animation {
+    0% {
+        opacity: 0;
+    }
+
+    5% {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1.3);
+        opacity: 0;
+    }
+}
